--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title></title>
 </head>
 <body>
+    <div id="root"></div>
     <script src="http://localhost:8080/js/main.js"></script>
 </body>
 </html>
